# MCAPWrapper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.ci/: build_installer.sh  build_repository.sh
.ci/install_dependencies/: install_mcap_wrapper  mcap_wrapper_install_script.sh
.github/workflows/: build.yaml
cmake/: MCAPWrapperConfig.cmake
example/3D/src/: main.cpp
example/images/: CMakeLists.txt
example/images/src/: main.cpp
example/json/: CMakeLists.txt
example/json/src/: main.cpp
example/log/: CMakeLists.txt
example/log/src/: main.cpp
example/positions/: .gitattributes  CMakeLists.txt
example/positions/src/: main.cpp
examples/: README.md
examples/3D/: CMakeLists.txt
examples/3D/src/: main.cpp
examples/images/: CMakeLists.txt
examples/images/src/: main.cpp
examples/json/: CMakeLists.txt
examples/json/src/: main.cpp
examples/log/: CMakeLists.txt
examples/log/src/: main.cpp
examples/positions/src/: main.cpp
include/: MCAPReader.h  MCAPWriter.h  define.h
include/internal/: Base64.hpp  FoxgloveSchema.hpp  IWriter.h  Internal3DObject.h  MCAPFileWriter.h  MCAPReaderImpl.h  MCAPWebSocketWriter.h  utils.hpp
src/: MCAPReader.cpp  MCAPWriter.cpp
src/internal/: FoxgloveSchema.cpp  IWriter.cpp  Internal3DObject.cpp  MCAPFileWriter.cpp  MCAPReaderImpl.cpp  MCAPWebSockerWriter.cpp  utils.cpp
tests/: run.sh
tests/UNIT/: CMakeLists.txt
tests/UNIT/src/: main.cpp
third_parties/foxglove_websocket/: base64.cpp  parameter.cpp  serialization.cpp  serialization.hpp  server_factory.cpp  websocket_client.hpp  websocket_server.hpp
third_parties/mcap/: types.cpp  types.hpp  writer.cpp
